k3s-cluster-apps/apps/media/qbittorrent/app/traefikCRD.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dl.${SECRET_CLUSTER_DOMAIN}`)
      middlewares:
        - name: authelia-forward
          namespace: security
      services:
        - kind: Service
          name: qbittorrent
          port: 8080
